@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3372 2019/08/09 20:25:29 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3373 2019/08/09 20:26:46 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5495,3 +5495,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added devel/R-devtools version 2.1.0 [brook 2019-08-09]
 	Added sysutils/R-later version 0.8.0 [brook 2019-08-09]
 	Added parallel/R-promises version 1.0.1 [brook 2019-08-09]
+	Added www/R-httpuv version 1.5.1 [brook 2019-08-09]
